--- a/.eslintrc
+++ b/.eslintrc
@@ -17,12 +17,14 @@
     "prettier"
   ],
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "tsconfig.json"
   },
   "rules": {
     "@typescript-eslint/no-unused-vars": ["warn", {"args": "none"}],
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/switch-exhaustiveness-check": "error",
 
     "no-prototype-builtins": "off",
     "no-var": "error",
