--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "strictNullChecks": true,
     "lib": ["DOM", "ES5", "ES6", "ES7"],
     "paths": {
-      "*": ["*", "src/*", "src/maximizeActivePane/*"]
+      "*": ["*", "src/*", "src/types/*", "src/maximizeActivePane/*"]
     }
   },
   "include": ["**/*.ts"]
