--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "prettier": "^2.8.7",
     "tslib": "2.4.0",
     "typescript": "4.7.4"
+  },
+  "dependencies": {
+    "jss": "^10.10.0",
+    "jss-preset-default": "^10.10.0"
   }
 }
