--- a/.eslintrc
+++ b/.eslintrc
@@ -17,8 +17,7 @@
     "prettier"
   ],
   "parserOptions": {
-    "sourceType": "module",
-    "project": "tsconfig.json"
+    "sourceType": "module"
   },
   "rules": {
     "@typescript-eslint/no-unused-vars": ["warn", {"args": "none"}],
