--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-sample-plugin",
-  "version": "1.0.0",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "name": "obsidian-secret-sauce-box",
+  "version": "0.0.1",
+  "description": "A bundle plug-in of my JavaScript secret sauce snippets for Obsidian (https://obsidian.md).",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
