Select active tab when switching from unstack to stack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
         "src/*",
         "src/types/*",
         "src/utils/*",
-        "src/DoubleClickMaximizeActive/*"
+        "src/DoubleClickMaximizeActive/*",
+        "src/PreserveActiveTab/*"
       ]
     }
   },
