--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,7 @@
     "strictNullChecks": true,
     "lib": ["DOM", "ES5", "ES6", "ES7"],
     "paths": {
-      "*": [
-        "*",
-        "src/*",
-        "src/types/*",
-        "src/utils/*",
-        "src/DoubleClickMaximizeActive/*",
-        "src/PreserveActiveTab/*"
-      ]
+      "*": ["*", "src/*", "src/types/*", "src/utils/*", "src/SecretSauces/*"]
     }
   },
   "include": ["**/*.ts"]
